@startuml
skinparam classAttributeIconSize 0

interface DataHub {
  +loadModuleData(excelPath: String): Map<String, ModuleData>
  +loadBasicInfo(excelPath: String): Map<String, BasicInfoData>
  +loadListTables(excelPath: String): Map<String, ListTableData>
  +loadRequirements(excelPath: String): List<Requirement>
  +loadTestCases(excelPath: String): List<TestCase>
  +loadTestResults(excelPath: String): List<TestResult>
  +loadConfig(excelPath: String): Map<String, String>
  +writeRequirements(excelPath: String, requirements: List<Requirement>): void
  +writeTestCases(excelPath: String, testCases: List<TestCase>): ImportSummary
  +appendTestResults(excelPath: String, testResults: List<TestResult>): ImportSummary
}

class ExcelDataHub {
  -excelReader: ExcelReader
  -tableDataReader: TableDataReader
}

abstract class AbstractDocumentGenerator {
  -dataHub: DataHub
  -wordDocumentBuilder: WordDocumentBuilder
  +generate(excelPath: String, templatePath: String, outputPath: String): GenerateResult
  #extractData(excelPath: String): ExtractedData
  #generateContent(templatePath: String, outputPath: String, extractedData: ExtractedData): int
  #save(outputPath: String, extractedData: ExtractedData, contentResult: int): GenerateResult
}

class STDGenerator
class STRGenerator

class WordDocumentBuilder
class ExcelReader
class TableDataReader

class ModuleData
class Requirement
class TestCase
class TestResult
class BasicInfoData
class ListTableData
class ImportSummary

interface ExtractedData
class GenerateResult {
  +moduleCount: int
}

ExcelDataHub ..|> DataHub
STDGenerator --|> AbstractDocumentGenerator
STRGenerator --|> AbstractDocumentGenerator
AbstractDocumentGenerator --> DataHub
AbstractDocumentGenerator --> WordDocumentBuilder
AbstractDocumentGenerator ..> ExtractedData
AbstractDocumentGenerator ..> GenerateResult
ExcelDataHub --> ExcelReader
ExcelDataHub --> TableDataReader
DataHub ..> ModuleData
DataHub ..> Requirement
DataHub ..> TestCase
DataHub ..> TestResult
DataHub ..> BasicInfoData
DataHub ..> ListTableData
DataHub ..> ImportSummary
@enduml
